# gotofasalfront

./: Dockerfile  README.md  app.py  index.py  pyproject.toml  requirements.txt  vercel.json
api/: app.py  emailHandler.py  index.py
api/templates/: alreadyRegistered.html  common.html  email_verify.html  email_verify_page.html  home.html  index.html  other_user_profile.html  signin.html  signup.html  userNotRegistered.html  user_profile.html
src/: emailHandler.py  index.py
src/templates/: alreadyRegistered.html  common.html  index.html
templates/: alreadyRegistered.html  index.html  signin.html
