[tool.poetry]
name = "gotofasalfront"
version = "0.1.0"
description = "front of gotofasal"
authors = ["balaram <webbdays@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
