[tool.poetry]
name = "gotofasalfront"
version = "0.1.0"
description = "front of gotofasal"
authors = ["balaram <webbdays@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
requests = "^2.28.1"
bcrypt = "^4.0.0"
pymongo = "^4.2.0"
PyJWT = {extras = ["crypto"], version = "^2.5.0"}
pytz = "^2022.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
